# LocalEidolon

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  test.html
EidolonReleasev1/: .gitkeep
ui/: conversationwindow.cpp  conversationwindow.h  llamasettings.h  llmserver.cpp  llmserver.h  main.cpp  settingsdialog.cpp  settingsdialog.h  trayapp.cpp  trayapp.h
